@@ -3206,6 +3206,31 @@ condition|)
 block|{
 comment|// exact revision has already been resolved
 comment|// => update it and discard this node
+name|_md
+operator|=
+name|_module
+operator|.
+name|getDescriptor
+argument_list|()
+expr_stmt|;
+comment|// needed for handleConfiguration
+if|if
+condition|(
+operator|!
+name|handleConfiguration
+argument_list|(
+name|loaded
+argument_list|,
+name|conf
+argument_list|,
+name|shouldBePublic
+argument_list|)
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
 name|resolved
 operator|.
 name|_downloaded
@@ -3292,6 +3317,61 @@ name|resolved
 argument_list|)
 expr_stmt|;
 comment|// this actually discards the node
+if|if
+condition|(
+name|_data
+operator|.
+name|getIvy
+argument_list|()
+operator|.
+name|logResolvedRevision
+argument_list|()
+condition|)
+block|{
+name|Message
+operator|.
+name|info
+argument_list|(
+literal|"\t["
+operator|+
+name|_module
+operator|.
+name|getId
+argument_list|()
+operator|.
+name|getRevision
+argument_list|()
+operator|+
+literal|"] "
+operator|+
+name|getId
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|Message
+operator|.
+name|verbose
+argument_list|(
+literal|"\t["
+operator|+
+name|_module
+operator|.
+name|getId
+argument_list|()
+operator|.
+name|getRevision
+argument_list|()
+operator|+
+literal|"] "
+operator|+
+name|getId
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 return|return
 literal|true
 return|;
@@ -3637,6 +3717,13 @@ name|boolean
 name|shouldBePublic
 parameter_list|)
 block|{
+if|if
+condition|(
+name|_md
+operator|!=
+literal|null
+condition|)
+block|{
 name|String
 index|[]
 name|confs
@@ -3646,13 +3733,6 @@ argument_list|(
 name|conf
 argument_list|)
 decl_stmt|;
-if|if
-condition|(
-name|_md
-operator|!=
-literal|null
-condition|)
-block|{
 for|for
 control|(
 name|int
