@@ -2202,6 +2202,166 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testResolveMultipleConfsWithLatest
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+comment|// Test case for IVY-188
+comment|//
+comment|// mod6.2  has two confs compile and run
+comment|//    depends on mod6.1     in conf (compile->default)
+comment|//    depends on mod1.2 latest (which is 2.2) in conf (run->default)
+comment|// mod6.1
+comment|//    depends on mod1.2 2.2
+name|ResolveReport
+name|report
+init|=
+name|_ivy
+operator|.
+name|resolve
+argument_list|(
+operator|new
+name|File
+argument_list|(
+literal|"test/repositories/1/org6/mod6.2/ivys/ivy-0.6.xml"
+argument_list|)
+operator|.
+name|toURL
+argument_list|()
+argument_list|,
+literal|null
+argument_list|,
+operator|new
+name|String
+index|[]
+block|{
+literal|"compile"
+block|,
+literal|"run"
+block|}
+argument_list|,
+name|_cache
+argument_list|,
+literal|null
+argument_list|,
+literal|true
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|report
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|report
+operator|.
+name|hasError
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|ConfigurationResolveReport
+name|crr
+init|=
+name|report
+operator|.
+name|getConfigurationReport
+argument_list|(
+literal|"compile"
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|crr
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|crr
+operator|.
+name|getArtifactsNumber
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|crr
+operator|=
+name|report
+operator|.
+name|getConfigurationReport
+argument_list|(
+literal|"run"
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|crr
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|crr
+operator|.
+name|getArtifactsNumber
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|_ivy
+operator|.
+name|getIvyFileInCache
+argument_list|(
+name|_cache
+argument_list|,
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"org1"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"2.2"
+argument_list|)
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|_ivy
+operator|.
+name|getArchiveFileInCache
+argument_list|(
+name|_cache
+argument_list|,
+literal|"org1"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"2.2"
+argument_list|,
+literal|"mod1.2"
+argument_list|,
+literal|"jar"
+argument_list|,
+literal|"jar"
+argument_list|)
+operator|.
+name|exists
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testResolveMultipleConfsWithConflicts
 parameter_list|()
 throws|throws
