@@ -1,0 +1,17 @@
+<ivy-module version="1.0">
+	<info organisation="org6"
+	       module="mod6.2"
+	       revision="0.6"
+	       status="integration"
+	       publication="20050312110000"
+	/>
+	<configurations>
+    	<conf name="compile"/>
+    	<conf name="run"/>
+	</configurations>
+	<publications />
+	<dependencies>
+		<dependency org="org6" name="mod6.1" rev="0.6" conf="compile->default"/>
+		<dependency org="org1" name="mod1.2" rev="latest.integration" conf="run->default"/>
+	</dependencies>
+</ivy-module>
